--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-scripts",
-  "version": "3.1.2",
-  "description": "Configuration and scripts for Create React App.",
+  "name": "@oyelowo/custom-react-scripts",
+  "version": "0.2.0",
+  "description": "Oyelowo custom Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/facebook/create-react-app.git",
+    "url": "https://github.com/Oyelowo/create-react-app.git",
     "directory": "packages/react-scripts"
   },
   "license": "MIT",
@@ -59,6 +59,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
