--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@oyelowo/custom-react-scripts",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Oyelowo custom Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
     "url": "https://github.com/Oyelowo/create-react-app.git",
-    "directory": "packages/react-scripts"
+    "directory": "Oyelowo/create-react-app"
   },
   "license": "MIT",
   "engines": {
