--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oyelowo/custom-react-scripts",
-  "version": "0.6.3",
-  "description": "Oyelowo custom Configuration and scripts for Create React App.",
+  "version": "0.6.4",
+  "description": "Add LESS and LESS module support to Create React App",
   "repository": {
     "type": "git",
     "url": "https://github.com/Oyelowo/create-react-app.git",
